# Frankie_Bot

./: CMakeLists.txt  README.md  package.xml  robot_tf.cpp  robot_use_tf.cpp
arduino/: base_controller.ino
launch/: minimal.launch  move_base.launch  navigate.launch  rtab_navigate.launch  rtab_slam.launch  slam.launch
launch/include/: amcl.launch  imu.launch  joystick_teleop.launch  laser.launch  move_base.launch  robot_pose_efk.launch  rtab_mapping.launch  zedd.launch
param/navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
params/: base_local_planner_params.yaml  global_costmap_params.yaml
src/: frankie_base_node.cpp
